# quantivecore

./: .gitignore  CMakeLists.txt  LICENSE  README.md  quantcore.pc.in
.github/workflows/: ci.yml
bench/: bench_gemm.cpp  check_regression.py  regression_baseline.json
docs/: ABI_SYMBOLS.txt  API.md  BUILD.md  DEPLOYMENT.md  FORMAT_SPEC.md  VERSIONING.md
examples/: simple_inference.cpp
examples/go_inference_example/: main.go
go/: go.mod
go/quantcore/: quantcore.go  quantcore_test.go
include/catch2/: catch_test_macros.hpp
include/quantcore/: binary_gemm.hpp  bitpack.hpp  blocking.hpp  c_api.h  format.hpp  ternary_gemm.hpp  version.hpp
src/: binary_gemm.cpp  binary_gemm_amx.cpp  binary_gemm_avx2.cpp  binary_gemm_avx512.cpp  bitpack.cpp  blocking_strategy.cpp  dispatch.cpp  format.cpp  numa_threadpool.cpp  perf_counters.cpp  ternary_gemm.cpp  ternary_gemm_avx2.cpp  ternary_gemm_avx512.cpp
tests/: property_tests.cpp  test_binary_gemm.cpp  test_bitpack.cpp  test_integration.cpp  test_ternary_gemm.cpp
